# Piscine_Python

module_00/ex00/: answers.txt  requirements.txt
module_00/ex01/: exec.py
module_00/ex02/: whois.py
module_00/ex03/: count.py
module_00/ex04/: operations.py
module_00/ex05/: kata00.py  kata01.py  kata02.py  kata04.py
module_00/ex06/: recipe.py
module_00/ex07/: filterwords.py
module_00/ex08/: sos.py
module_00/ex09/: guess.py
module_00/ex10/: loading.py
module_01/ex00/: book.py  recipe.py  test.py
module_01/ex01/: game.py
module_01/ex02/: test.py  vector.py
module_01/ex03/: generator.py
module_01/ex04/: eval.py
module_01/ex05/: test.py  the_bank.py
module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module_02/ex01/: main.py
module_02/ex02/: logger.py
module_02/ex03/: csvreader.py  test.py
module_02/ex04/: build.sh  pyproject.toml  setup.cfg
module_02/ex04/src/my_minipack/: __init__.py
module_02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
module_03/ex00/: NumPyCreator.py  test.py
module_03/ex01/: ImageProcessor.py  test.py
module_03/ex02/: ScrapBooker.py  test.py
module_03/ex03/: ColorFilter.py  ImageProcessor.py  test.py
module_03/ex04/: Kmeans.py  command
module_04/ex01/: FileLoader.py  YoungestFellah.py
module_04/ex02/: FileLoader.py  ProportionBySport.py
module_04/ex03/: FileLoader.py  HowManyMedals.py
module_04/ex04/: FileLoader.py  SpatioTemporalData.py
module_04/ex05/: FileLoader.py  HowManyMedalsByCountry.py
module_04/ex06/: FileLoader.py  MyPlotLib.py
module_04/ex07/: FileLoader.py  (+2 more)
