[metadata]
name = my_minipack
version = 1.0.0
summary = module_02 - ex04
description = A small example package
long_description = file: README.txt
url = https://github.com/DianeHemi/Piscine_Python/tree/main/module_02
author = dchampda
author_email = dchampda@student.42.fr
homepage = None
license = GPLv3
metadata_version = 2.1
classifiers =
       Development Status :: 3 - Alpha
       Intended Audience :: Developers
       Intended Audience :: Students
       Topic :: Education
       Topic :: HowTo
       Topic :: Package
       License :: OSI Approved :: NU General Public License v3 (GPLv3)
       Programming Language :: Python :: 3
       Programming Language :: Python :: 3 :: Only


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src